--- a/src/MA/UserBundle/Resources/views/User/indexUser.html.twig
+++ b/src/MA/UserBundle/Resources/views/User/indexUser.html.twig
@@ -29,6 +29,15 @@
 						<strong>
 							Bienvenu à nouveau sur l'administration de ce site web !
 						</strong>
+
+						<!-- ADMIN JAVASCRIPTS -->
+					    {% javascripts 
+					      'js/admin_javascripts_misAnd.js'
+
+					      %}
+					      <script type="text/javascript" src="{{ asset_url }}"></script>
+					    {% endjavascripts %}
+					    <!-- END ADMIN JAVASCRIPTS -->
 				  	</div>
 				  	
 	        	{% else %}
@@ -37,54 +46,6 @@
 	        			Vous n'êtes pas autorisé(e) à naviguer dans cette partie du site !
 	        		</div>
 	        	{% endif %}
-
-
-		        <script>
-              		function changeCSSsheet(selector, property, value) {
-					    for (var i=0; i < document.styleSheets.length;i++) { //Loop through all styles
-					        //Try add rule
-					        try { document.styleSheets[i].insertRule(selector+ ' {'+property+':'+value+'}', document.styleSheets[i].cssRules.length);
-					        } catch(err) {try { document.styleSheets[i].addRule(selector, property+':'+value);} catch(err) {}}//IE
-					    }
-					}
-
-					var cw = $('.article_photo_admin').width() * 0.5625;  // 16:9e
-                    changeCSSsheet('.article_photo_admin', 'height', cw+'px');
-                    $(window).resize(function() {
-                      var cw = $('.article_photo_admin').width() * 0.5625;  // 16:9e
-                      changeCSSsheet('.article_photo_admin', 'height', cw+'px');
-                    });
-
-                    var cw = $('.photo_default').width();
-                    $('.photo_default').css({'height':cw+'px'});
-
-              		function areYouSureDeleteArticle(path) {
-						if (confirm('Êtes-vous sûr de vouloir supprimer cet article ?')) {
-							window.location = path;
-						}
-					}
-					function areYouSureDeletePhoto(path) {
-						if (confirm('Êtes-vous sûr de vouloir supprimer cette photo ?')) {
-							window.location = path;
-						}
-					}
-					function areYouSureDeleteVideo(path) {
-						if (confirm('Êtes-vous sûr de vouloir supprimer cette vidéo ?')) {
-							window.location = path;
-						}
-					}
-					function areYouSureDeletePerson(path) {
-						if (confirm('Êtes-vous sûr de vouloir supprimer ce bénéficiaire ?')) {
-							window.location = path;
-						}
-					}
-					function areYouSureDeleteProject(path) {
-						if (confirm('Êtes-vous sûr de vouloir supprimer ce projet ?')) {
-							window.location = path;
-						}
-					}
-              	</script>
-				
 
 			</div>
 		</div>
