modif de l ordre

--- a/app/Resources/views/includes/header.html.twig
+++ b/app/Resources/views/includes/header.html.twig
@@ -9,29 +9,10 @@
 				<span class="glyphicon glyphicon-home white" aria-hidden="true"></span>
 			</a>
 		</li>
-		<li class="dropdown border_right_li" id="btn_header1">
-		    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
-		      L'association <span class="caret"></span>
-		    </a>
-		    <ul class="dropdown-menu" role="menu">
-		    	<li>
-	          		<a href="{{ path('ma_main_homepage') }}#assoc"  id="btn_section1">
-	          			Qui sommes-nous ?
-	          		</a>
-	          	</li>
-	          	<hr/>
-	          	<li>
-	          		<a href="{{ path('ma_main_homepage') }}#assoc">
-	          			La charte
-	          		</a>
-	          	</li>
-	          	<hr/>
-	          	<li>
-	          		<a href="{{ path('ma_main_homepage') }}#assoc">
-	          			Quelques repères
-	          		</a>
-	          	</li>
-		    </ul>
+		<li  class="li_mobile border_bottom_white" id="btn_header1">
+			<a href="{{ path('ma_main_homepage') }}#actu" id="btn_section1" class="link_in_dropdown">
+				L'actualité
+			</a>
 		</li>
 		<li class="dropdown border_right_li" id="btn_header2">
 		    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
@@ -62,10 +43,29 @@
 				Nos besoins
 			</a>
 		</li>
-		<li  class="border_right_li" id="btn_header6">
-			<a href="{{ path('ma_main_homepage') }}#actu" id="btn_section6">
-				L'actualité
-			</a>
+		<li class="dropdown li_mobile border_bottom_white" id="btn_header6">
+		    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
+		      L'association <span class="caret"></span>
+		    </a>
+		    <ul class="dropdown-menu" role="menu">
+	          	<li>
+	          		<a href="{{ path('ma_main_homepage') }}#assoc"  id="btn_section6">
+	          			Qui sommes-nous ?
+	          		</a>
+	          	</li>
+	          	<hr/>
+	          	<li>
+	          		<a href="{{ path('ma_main_homepage') }}#assoc">
+	          			La charte
+	          		</a>
+	          	</li>
+	          	<hr/>
+	          	<li>
+	          		<a href="{{ path('ma_main_homepage') }}#assoc">
+	          			Quelques repères
+	          		</a>
+	          	</li>
+		    </ul>
 		</li>
 		<li  class="border_right_li" id="btn_header7">
 			<a href="{{ path('ma_main_homepage') }}#footer" id="btn_section7">
@@ -105,23 +105,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="top_menu_dropdown">
       <ul class="nav navbar-nav">
-		<li class="dropdown li_mobile border_bottom_white" id="btn_header1">
-		    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
-		      L'association <span class="caret"></span>
-		    </a>
-		    <ul class="dropdown-menu" role="menu">
-	          	<li>
-	          		<a href="{{ path('ma_main_homepage') }}#assoc" class="link_in_dropdown">
-	          			La charte
-	          		</a>
-	          	</li>
-	          	<hr/>
-	          	<li>
-	          		<a href="{{ path('ma_main_homepage') }}#assoc" id="btn_section1"  class="link_in_dropdown">
-	          			Petite histoire
-	          		</a>
-	          	</li>
-		    </ul>
+      	<li  class="border_right_li" id="btn_header1">
+			<a href="{{ path('ma_main_homepage') }}#actu" id="btn_section6">
+				L'actualité
+			</a>
 		</li>
 		<li class="dropdown li_mobile border_bottom_white" id="btn_header2">
 		    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
@@ -147,13 +134,37 @@
 	          	</li>
 		    </ul>
 		</li>
-		<li  class="li_mobile border_bottom_white" id="btn_header5">
-			<a href="{{ path('ma_main_homepage') }}#actu" id="btn_section5" class="link_in_dropdown">
-				L'actualité
+		<li  class="border_right_li" id="btn_header5">
+			<a href="{{ path('ma_main_homepage') }}#nosBesoins" id="btn_section5">
+				Nos besoins
 			</a>
 		</li>
-		<li  class="li_mobile border_bottom_white" id="btn_header6">
-			<a href="{{ path('ma_main_homepage') }}#footer" id="btn_section6" class="link_in_dropdown">
+		<li class="dropdown border_right_li" id="btn_header6">
+		    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
+		      L'association <span class="caret"></span>
+		    </a>
+		    <ul class="dropdown-menu" role="menu">
+		    	<li>
+	          		<a href="{{ path('ma_main_homepage') }}#assoc"  id="btn_section6">
+	          			Qui sommes-nous ?
+	          		</a>
+	          	</li>
+	          	<hr/>
+	          	<li>
+	          		<a href="{{ path('ma_main_homepage') }}#assoc">
+	          			La charte
+	          		</a>
+	          	</li>
+	          	<hr/>
+	          	<li>
+	          		<a href="{{ path('ma_main_homepage') }}#assoc">
+	          			Quelques repères
+	          		</a>
+	          	</li>
+		    </ul>
+		</li>
+		<li  class="li_mobile border_bottom_white" id="btn_header7">
+			<a href="{{ path('ma_main_homepage') }}#footer" id="btn_section7" class="link_in_dropdown">
 				Contact
 			</a>
 		</li>
