--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -50,31 +50,31 @@
 			<div class="row center footer_part footer_bottom">
 				<ul>
 					<li>
-						<a href="" class="disabled">
+						<a href="" data-toggle="modal" data-target="#legalMentions" class="disabled">
 							Mentions légales
 						</a>
 					</li> 
 					<span class="red"> — </span>
 					<li>
-						<a href="" class="disabled">
+						<a href="" data-toggle="modal" data-target="#thanksTo" class="disabled">
 							Remerciements
 						</a>
 					</li> 
 					<span class="red"> — </span>
 					<li>
-						<a href="" class="disabled">
+						<a href="" data-toggle="modal" data-target="#FAQ" class="disabled">
 							FAQ
 						</a>
 					</li> 
 					<span class="red"> — </span>
 					<li>
 						<a href="{{ path('ma_main_homepage') }}#actu">
-							Nouvelles
+							Actualité
 						</a>
 					</li> 
 					<span class="red"> — </span>
 					<li>
-						<a href="" class="disabled">
+						<a href="{{ path('ma_main_helpUs') }}" class="disabled">
 							Faire un don
 						</a>
 					</li>
